--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -81,7 +81,6 @@
 
 .wrapSignUp input::placeholder {
   padding-left: 5px;
-  /* margin-left: 5px; */
 }
 
 .wrapSignUp button {
@@ -89,12 +88,22 @@
   outline: none;
   cursor: pointer;
   font-size: calc(1rem + 0.2vw);
-  height: 100%;
   text-align: center;
   text-transform: uppercase;
   border: none;
   padding: var(--signUpPadding);
   width: 15%;
+  height: 100%;
   color: var(--text-color);
   background-color: var(--primary);
+}
+
+@media (max-width: 768px) {
+  .wrapSignUp input {
+    width: 60%;
+  }
+
+  .wrapSignUp button {
+    width: auto;
+  }
 }
