vercel secrets fix

--- a/components/Subscribe/Sub.module.scss
+++ b/components/Subscribe/Sub.module.scss
@@ -41,7 +41,7 @@
     }
 
     button {
-      background-color: #eb30c1;
+      background-color: var(--color-alpha);
       border: none;
       color: #ffffff;
       display: table;
