--- a/components/Line/Line.module.scss
+++ b/components/Line/Line.module.scss
@@ -1,5 +1,5 @@
 .line {
   width: 100%;
   height: 10px;
-  background-image: linear-gradient(270deg, var(--color-beta) 25.28%, var(--color-alpha) 59.7%, var(--color-gamma) 97.75%);
+  background-image: linear-gradient(270deg, var(--color-beta) 25.28%, var(--color-omega) 59.7%, var(--color-gamma) 97.75%);
 }
