--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -13,6 +13,7 @@
   scroll-snap-align: start;
   clear: both;
   position: relative;
+  user-select: none;
 
   @media (max-width: 768px) {
     height: 300px;
