--- a/components/Subscribe/Sub.module.scss
+++ b/components/Subscribe/Sub.module.scss
@@ -65,6 +65,11 @@
       @media(max-width: 450px) {
         padding: 3.5vw;
       }
+
+      &:hover {
+        background-color: var(--color-beta);
+        transition: all .2s;
+      }
     }
   }
 
